--- a/admin/v2/index.html
+++ b/admin/v2/index.html
@@ -8,7 +8,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
     <style>
-        /* Styling for dark, glossy UI with blue-green color scheme */
         * {
             margin: 0;
             padding: 0;
@@ -19,55 +18,39 @@
         body {
             background: linear-gradient(145deg, #0e2029, #12343b);
             color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow-y: auto;
-            padding: 20px;
+            min-height: 100vh;
+            overflow-y: scroll;
         }
 
         h1, h2 {
             color: #88c0d0;
             text-align: center;
-            margin-bottom: 15px;
         }
 
         .container {
-            background: rgba(0, 150, 136, 0.15);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-            border-radius: 10px;
-            padding: 20px;
+            margin: 20px auto;
             max-width: 600px;
-            width: 100%;
-            color: #ffffff;
-        }
-
-        #loginForm, #adminDashboard {
-            display: none;
+            padding: 20px;
+            background: rgba(0, 150, 136, 0.15);
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
         input, select, button {
+            display: block;
             width: 100%;
+            margin-bottom: 10px;
             padding: 10px;
-            margin-bottom: 15px;
+            font-size: 1em;
             border: none;
             border-radius: 8px;
-            font-size: 1em;
-            color: #ffffff;
-        }
-
-        input, select {
             background: rgba(255, 255, 255, 0.1);
+            color: #ffffff;
         }
 
         button {
             background: #005e5b;
-            color: #ffffff;
             cursor: pointer;
-            font-weight: bold;
-            box-shadow: 0 4px 8px rgba(0, 100, 100, 0.2);
             transition: background 0.3s;
         }
 
@@ -75,37 +58,36 @@
             background: #00494a;
         }
 
-        #transactionsTable {
+        table {
             width: 100%;
+            margin-top: 20px;
             border-collapse: collapse;
-            background: rgba(0, 150, 136, 0.1);
-            border-radius: 8px;
-            overflow: hidden;
-            margin-top: 10px;
-        }
-
-        #transactionsTable th, #transactionsTable td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             color: #ffffff;
         }
 
-        #transactionsTable th {
+        th, td {
+            text-align: left;
+            padding: 10px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        th {
             background: rgba(255, 255, 255, 0.1);
         }
 
-        #transactionsTable button {
-            width: auto;
-            padding: 5px 10px;
-            margin: 0 5px;
+        .action-buttons {
+            display: flex;
+            gap: 10px;
+        }
+
+        .action-buttons button {
+            flex: 1;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Admin Dashboard</h1>
-        
         <div id="loginForm">
             <h2>Login</h2>
             <input type="email" id="email" placeholder="Email">
@@ -114,15 +96,14 @@
             <p id="errorMessage" style="color: red;"></p>
         </div>
 
-        <div id="adminDashboard">
+        <div id="adminDashboard" style="display: none;">
             <button onclick="logout()">Logout</button>
             <h2>Select User</h2>
             <select id="userDropdown" onchange="fetchTransactions(this.value)">
                 <option value="">Select a User</option>
             </select>
-
             <h2>User Transactions</h2>
-            <table id="transactionsTable">
+            <table>
                 <thead>
                     <tr>
                         <th>Amount</th>
@@ -133,7 +114,6 @@
                 </thead>
                 <tbody id="transactionsList"></tbody>
             </table>
-
             <h2>Add Transaction</h2>
             <input type="number" id="amount" placeholder="Amount">
             <input type="text" id="date" placeholder="Date (e.g., '11.09')">
@@ -150,120 +130,108 @@
             apiKey: "AIzaSyDl6hnUPdneEuC9emWbELvYoplR8vWhEsA",
             authDomain: "debts-92f72.firebaseapp.com",
             projectId: "debts-92f72",
-            storageBucket: "debts-92f72.appspot.com",
+            storageBucket: "debts-92f72.firebasestorage.app",
             messagingSenderId: "904817355212",
-            appId: "1:904817355212:web:0e50faa2c6ac4d5ec6d569"
+            appId: "1:904817355212:web:fd6837ba25f57d0ec6d569"
         };
 
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
         const db = firebase.firestore();
 
-        document.getElementById('loginForm').style.display = 'block';
-
         function login() {
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-            const errorMessage = document.getElementById('errorMessage');
-            
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
             auth.signInWithEmailAndPassword(email, password)
-                .then(userCredential => {
-                    const user = userCredential.user;
-                    if (user.uid === "01bLIykolnQuLHBsX7Ca5BKwMMo1") {
-                        document.getElementById('loginForm').style.display = 'none';
-                        document.getElementById('adminDashboard').style.display = 'block';
+                .then((userCredential) => {
+                    if (userCredential.user.uid === "01bLIykolnQuLHBsX7Ca5BKwMMo1") {
+                        document.getElementById("loginForm").style.display = "none";
+                        document.getElementById("adminDashboard").style.display = "block";
                         fetchUsers();
                     } else {
-                        errorMessage.textContent = "Unauthorized access.";
+                        alert("Unauthorized");
                         auth.signOut();
                     }
                 })
-                .catch(error => {
-                    errorMessage.textContent = "Login failed: " + error.message;
+                .catch((error) => {
+                    document.getElementById("errorMessage").innerText = error.message;
                 });
-        }
-
-        async function fetchUsers() {
-            const usersSnapshot = await db.collection("login").get();
-            const userDropdown = document.getElementById('userDropdown');
-            userDropdown.innerHTML = '<option value="">Select a User</option>';
-            usersSnapshot.forEach(doc => {
-                const userData = doc.data();
-                const option = document.createElement("option");
-                option.value = doc.id;
-                option.textContent = `${userData.name} (${userData.email.replace(/\"/g, '')})`;
-                userDropdown.appendChild(option);
-            });
-        }
-
-        async function fetchTransactions(userUid) {
-            const transactionsList = document.getElementById('transactionsList');
-            transactionsList.innerHTML = '';
-            const transactionsSnapshot = await db.collection(userUid).get();
-            transactionsSnapshot.forEach(doc => {
-                const transaction = doc.data();
-                const row = document.createElement("tr");
-                row.innerHTML = `
-                    <td contenteditable="false">${transaction.amount}</td>
-                    <td contenteditable="false">${transaction.date}</td>
-                    <td contenteditable="false">${transaction.type}</td>
-                    <td>
-                        <button onclick="editTransaction(this, '${userUid}', '${doc.id}')">✏️</button>
-                        <button onclick="deleteTransaction('${userUid}', '${doc.id}')">🗑️</button>
-                    </td>`;
-                transactionsList.appendChild(row);
-            });
-        }
-
-        async function editTransaction(button, userUid, docId) {
-            const row = button.closest("tr");
-            const editable = button.textContent === "✏️";
-            button.textContent = editable ? "✔️" : "✏️";
-            [...row.querySelectorAll("td[contenteditable]")].forEach(cell => {
-                cell.contentEditable = editable.toString();
-                if (!editable) {
-                    const [amount, date, type] = row.children;
-                    db.collection(userUid).doc(docId).set({
-                        amount: parseInt(amount.textContent),
-                        date: date.textContent,
-                        type: type.textContent
-                    });
-                }
-            });
-        }
-
-        async function deleteTransaction(userUid, docId) {
-            if (confirm("Are you sure you want to delete this transaction?")) {
-                await db.collection(userUid).doc(docId).delete();
-                fetchTransactions(userUid);
-            }
-        }
-
-        async function addTransaction() {
-            const userUid = document.getElementById('userDropdown').value;
-            const amount = document.getElementById('amount').value;
-            const date = document.getElementById('date').value;
-            const type = document.getElementById('type').value;
-
-            if (!userUid || !amount || !date || !type) {
-                alert("Please fill in all fields.");
-                return;
-            }
-
-            const newId = Date.now().toString();
-            await db.collection(userUid).doc(newId).set({
-                amount: parseInt(amount),
-                date,
-                type
-            });
-            fetchTransactions(userUid);
         }
 
         function logout() {
             auth.signOut().then(() => {
-                document.getElementById('loginForm').style.display = 'block';
-                document.getElementById('adminDashboard').style.display = 'none';
+                document.getElementById("loginForm").style.display = "block";
+                document.getElementById("adminDashboard").style.display = "none";
             });
+        }
+
+        async function fetchUsers() {
+            const snapshot = await db.collection("login").get();
+            const userDropdown = document.getElementById("userDropdown");
+            snapshot.forEach((doc) => {
+                const option = document.createElement("option");
+                option.value = doc.id;
+                option.textContent = doc.data().name;
+                userDropdown.appendChild(option);
+            });
+        }
+
+        async function fetchTransactions(userId) {
+            const transactionsList = document.getElementById("transactionsList");
+            transactionsList.innerHTML = "";
+            const snapshot = await db.collection(userId).get();
+            snapshot.forEach((doc) => {
+                const data = doc.data();
+                const row = document.createElement("tr");
+                row.innerHTML = `
+                    <td data-original="${data.amount}">${data.amount}</td>
+                    <td data-original="${data.date}">${data.date}</td>
+                    <td>${data.type}</td>
+                    <td>
+                        <div class="action-buttons">
+                            <button onclick="deleteTransaction('${userId}', '${doc.id}')">🗑️</button>
+                            <button onclick="editTransaction('${userId}', '${doc.id}', this)">✏️</button>
+                        </div>
+                    </td>
+                `;
+                transactionsList.appendChild(row);
+            });
+        }
+
+        async function deleteTransaction(userId, transactionId) {
+            await db.collection(userId).doc(transactionId).delete();
+            fetchTransactions(userId);
+        }
+
+        async function editTransaction(userId, transactionId, button) {
+            const row = button.closest("tr");
+            const [amountCell, dateCell] = row.children;
+            if (button.textContent === "✏️") {
+                button.textContent = "💾";
+                amountCell.contentEditable = true;
+                dateCell.contentEditable = true;
+                amountCell.focus();
+            } else {
+                await db.collection(userId).doc(transactionId).update({
+                    amount: parseInt(amountCell.textContent),
+                    date: dateCell.textContent
+                });
+                amountCell.contentEditable = false;
+                dateCell.contentEditable = false;
+                button.textContent = "✏️";
+            }
+        }
+
+        async function addTransaction() {
+            const userId = document.getElementById("userDropdown").value;
+            const amount = parseInt(document.getElementById("amount").value);
+            const date = document.getElementById("date").value;
+            const type = document.getElementById("type").value;
+            const snapshot = await db.collection(userId).get();
+            const docIds = snapshot.docs.map(doc => parseInt(doc.id)).sort((a, b) => a - b);
+            const newId = docIds.length ? docIds[0] - 1 : 99;
+            await db.collection(userId).doc(newId.toString()).set({ amount, date, type });
+            fetchTransactions(userId);
         }
     </script>
 </body>
