--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debt Tracker with Persistent Login</title>
+    <link rel="icon" type="image/png" href="fav.png">
     <style>
         /* Basic styling */
         * {
