--- a/admin/index.html
+++ b/admin/index.html
@@ -253,7 +253,7 @@
             const type = document.getElementById("type").value;
             const snapshot = await db.collection(userId).get();
             const docIds = snapshot.docs.map(doc => parseInt(doc.id)).sort((a, b) => a - b);
-            const newId = docIds.length ? docIds[docIds.length - 1] + 1 : 1;
+            const newId = docIds.length ? docIds[0] - 1 : -1;
             await db.collection(userId).doc(newId.toString()).set({ amount, date, type });
             fetchTransactions(userId);
         }
