--- a/admin/mail.html
+++ b/admin/mail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Mail sender</title>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
@@ -75,7 +75,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Admin Dashboard</h1>
+        <h1>Mail sender</h1>
         <div id="loginForm">
             <h2>Login</h2>
             <input type="email" id="email" placeholder="Email">
@@ -92,9 +92,9 @@
             </select>
             <div id="total-debt"></div>
             <h2>Send Email</h2>
-            <input type="text" id="userName" placeholder="Name" readonly>
-            <input type="email" id="userEmail" placeholder="Email" readonly>
-            <input type="text" id="userTotal" placeholder="Total Amount" readonly>
+            <input type="text" id="userName" placeholder="Name">
+            <input type="email" id="userEmail" placeholder="Email">
+            <input type="text" id="userTotal" placeholder="Total Amount">
             <button onclick="sendEmail()">Send Email</button>
             <div id="emailStatus"></div>
         </div>
